# autosde

./: .gitignore  AGENT.md  README.md  install.sh  loop.sh  package-lock.json  package.json  pyproject.toml  tsconfig.json  tsup.config.ts
autosde/: cli.py  helpers.py  loop.py
src/: cli.ts  helpers.ts  loop.ts
